--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
 *.png
+*.zip
+DS_10283_3192/
+*.mp4
